--- a/bin/openapi/callback.yaml
+++ b/bin/openapi/callback.yaml
@@ -12,6 +12,8 @@ paths:
       tags:
         - callback
       description: Send callback form 
+      security:
+        - BearerAuth: []
       requestBody:
         description: Structure of new experience
         content:
