--- a/bin/openapi/social-media.yaml
+++ b/bin/openapi/social-media.yaml
@@ -31,6 +31,8 @@ paths:
       tags:
         - social-media
       description: Create new link social media
+      security:
+        - BearerAuth: []
       requestBody:
         description: Data for new link
         content:
@@ -49,6 +51,8 @@ paths:
       tags:
         - social-media
       description: Change one the social media
+      security:
+        - BearerAuth: []
       parameters:
         - in: path
           name: id
@@ -73,6 +77,8 @@ paths:
       tags:
         - social-media
       description: Delete one of Social media
+      security:
+        - BearerAuth: []
       parameters:
         - in: path
           name: id
