--- a/bin/openapi/bundle-doc.yaml
+++ b/bin/openapi/bundle-doc.yaml
@@ -9,27 +9,59 @@ info:
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
   version: 0.0.1
 servers:
-  - url: 'http://localhost:3000/api'
+  - url: 'http://localhost:8000/api'
     description: dev server
 paths:
-  /auth/login:
+  /user:
     get:
+      tags:
+        - user
+      summary: Getting data user
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: 1
+                  name:
+                    type: string
+                    example: Vasa
+                  email:
+                    type: string
+                    example: vasa@mail.com
+        '400':
+          $ref: '#/components/responses/4XX'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '500':
+          $ref: '#/components/responses/5XX'
+  /auth/login:
+    post:
       tags:
         - auth
       summary: Logs user into the system
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: true
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: Data for login
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: username
+                password:
+                  type: string
+                  required:
+                    - username
+                    - password
       responses:
         '200':
           description: successful operation
@@ -53,7 +85,7 @@ paths:
         '500':
           $ref: '#/components/responses/5XX'
   /auth/logout:
-    get:
+    delete:
       tags:
         - auth
       summary: Logs out current logged in user session
@@ -108,9 +140,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/paths/~1auth~1login/get/responses/200/content/application~1json/schema'
+                $ref: '#/paths/~1auth~1login/post/responses/200/content/application~1json/schema'
         '400':
           $ref: '#/components/responses/4XX'
+        '422':
+          $ref: '#/components/responses/422'
         '500':
           $ref: '#/components/responses/5XX'
   /homepage:
@@ -1240,6 +1274,22 @@ components:
                 readOnly: true
             example:
               message: Forbidden
+    '422':
+      description: |
+        Unprocessable Entity
+        Answer 422 (Unprocessable Entity) means that the server understands the specified data type, and the query syntax is correct.But the token itself will not be valid
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - message
+            properties:
+              message:
+                type: string
+                readOnly: true
+            example:
+              message: Token isn't valid
     200AfterSuccessfulChangesEntity:
       description: Successful creating
       content:
