was added point to homepage goal for getting data on all languages

--- a/bin/openapi/api-doc.yaml
+++ b/bin/openapi/api-doc.yaml
@@ -23,6 +23,8 @@ paths:
     $ref: 'auth.yaml#/paths/~1auth~1logout'
   /auth/refresh-token:
     $ref: 'auth.yaml#/paths/~1auth~1refresh-token'
+  /homepage/multilingual:
+    $ref: 'homepage.yaml#/paths/~1homepage~1multilingual'
   /homepage:
     $ref: 'homepage.yaml#/paths/~1homepage'
   /projects:
