--- a/bin/openapi/time-stamps.yaml
+++ b/bin/openapi/time-stamps.yaml
@@ -141,6 +141,31 @@ paths:
         500: 
           $ref: 'api-doc.yaml#/components/responses/5XX'    
 
+  /time-stamp/{id}/multilingual:
+    get:
+      tags:
+        - time-stamps
+      description: Get one time stamps on all languages
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: desc 
+      responses:
+        200:
+          description: Successfully received the data on the time stamp with all languages
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TimeStampsMultilingual'
+        400:
+          $ref: 'api-doc.yaml#/components/responses/4XX'
+        500: 
+          $ref: 'api-doc.yaml#/components/responses/5XX'
 components:
   schemas:
     TimeStampsCommon:
@@ -174,6 +199,18 @@ components:
           properties:
             description:
               $ref: 'api-doc.yaml#/components/schemas/StringWithDivisionIntoLanguages'
-      
+    
+    TimeStampsMultilingual:
+      allOf:
+        - $ref: '#/components/schemas/TimeStampsCommon'
+        - type: object
+          properties:
+            id:
+              type: string
+              example: 10
+        - type: object
+          properties:
+            description:
+              $ref: 'api-doc.yaml#/components/schemas/StringWithDivisionIntoLanguages'
 
 
