--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,27 +21,10 @@ server {
     proxy_set_header Accept-Encoding "";
     sub_filter_once off;
 
-    location /private-x-accel-redirect/ {
-      internal;
-      alias   /usr/share/nginx/private_media/;
-    }
-
     location / {
         sub_filter_types application/json;
     	sub_filter "http://" "https://";
-        proxy_pass http://DJANGO_SERVICE:8000;
-    }
-
-    location ADMIN_STATIC_URL {
-        alias /usr/share/nginx/ADMIN_STATIC_PATH/;
-    }
-
-    location ~ ^MEDIA_URL {
-        root /usr/share/nginx/;
-    }
-
-    location ~ ^/admin$ {
-        return 302 /admin/;
+        proxy_pass http://PORTFOLIO_API_SERVICE:8000;
     }
 }
 
