--- a/app/bin/openapi/api-doc.yaml
+++ b/app/bin/openapi/api-doc.yaml
@@ -13,6 +13,8 @@ info:
 servers:
 - url: http://localhost:8000/api
   description: dev server
+- url: http://localhost:5050/api
+  description: dev server docker
 
 paths:
   /user:
