--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "build": "tsc",
-    "bundle-openapi": "swagger-cli bundle ./bin/openapi/api-doc.yaml --outfile ./bin/openapi/bundle-doc.yaml --type yaml"
+    "bundle-openapi": "swagger-cli bundle ./app/bin/openapi/api-doc.yaml --outfile ./app/bin/openapi/bundle-doc.yaml --type yaml"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -65,6 +65,7 @@
     "nodemon": "^2.0.15",
     "passport-local": "^1.0.0",
     "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.5"
   }
 }
