--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,30 +1,25 @@
-resolver 127.0.0.11 valid=30s;
-
 server {
     listen 80;
 
-    proxy_buffering off;
-    client_max_body_size 0;
-    proxy_connect_timeout       600;
-    proxy_send_timeout          600;
-    proxy_read_timeout          600;
-    send_timeout                600;
-
-    proxy_redirect off;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Url-Scheme $scheme;
-    proxy_hide_header X-Frame-Options;
-    proxy_hide_header Content-Security-Policy;
+    client_max_body_size 50m;
 
-    proxy_set_header Accept-Encoding "";
-    sub_filter_once off;
+
+
+    location ~ /api/.+$ {
+        proxy_pass http://PORTFOLIO_API_SERVICE:8000;
+    }
+
+    location ~ /api-documentation {
+        proxy_pass http://PORTFOLIO_API_SERVICE:8000;
+    }
+
+    location ~ /public/images/.+$ {
+        proxy_pass http://PORTFOLIO_API_SERVICE:8000;
+    }
 
     location / {
-        sub_filter_types application/json;
-    	sub_filter "http://" "https://";
-        proxy_pass http://PORTFOLIO_API_SERVICE:8000;
+        return 404;
     }
 }
 
